# midicontrol

./: .gitignore  CMakeLists.txt  README.md  entry.cpp  entry.h  keyconf  keytest.cpp  keytest.h  makefile  settings.cpp  settings.h
doc/: Doxyfile  midicontrol.1  midicontrol.bashcomp
src/: entry.cpp  entry.h  keytest.cpp  keytest.h  settings.cpp  settings.h
test/: main_test.cpp  settings_test.cpp
tests/: entry_test.cpp  settings_test.cpp  test
tests/conf/: testconfig
